--- a/model_integration.ipynb
+++ b/model_integration.ipynb
@@ -385,11 +385,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 22,
       "metadata": {
         "id": "u67QzSk305DE"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1    Female_Labor_Participation\n",
+            "2                          Year\n",
+            "0             Population_Growth\n",
+            "3                  Real_GDP_Ksh\n",
+            "4     Education_Expenditure_Ksh\n",
+            "Name: Feature, dtype: object\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.ensemble import ExtraTreesRegressor\n",
         "\n",
@@ -413,7 +426,9 @@
         "X = data[top_features]\n",
         "\n",
         "# Create the target variable y\n",
-        "y = data['Total_Unemployment']\n"
+        "y = data['Total_Unemployment']\n",
+        "\n",
+        "print(top_features)"
       ]
     },
     {
@@ -789,7 +804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -812,6 +827,25 @@
         "\n",
         "print(\"Predictions on the testing data:\")\n",
         "print(y_test_pred)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Index(['Population_Growth', 'Real_GDP_Ksh', 'Education_Expenditure_Ksh',\n",
+            "       'Female_Labor_Participation', 'Year'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(X_test.columns)"
       ]
     },
     {
